# V-Frame

./: CMakeLists.txt  CMakePresets.json  README.md  build.py
include/vFrame/: vf_vulkan.hpp  window.h  window.hpp
include/vFrame/for_user/: vf_application.hpp
src/: vf_vulkan.cpp  window.c  window.cpp
src/user_realisation/: vf_application.cpp
